---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "
  PENDING"
      WORD "PENDING"
    ENUM_VARIANT "
  ACTIVE"
      WORD "ACTIVE"
    ENUM_VARIANT "
  INACTIVE"
      WORD "INACTIVE"
    ENUM_VARIANT "
  SUSPENDED"
      WORD "SUSPENDED"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "HandleStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "status"
        TYPE_EXPR " Status"
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WORD "match"
        OBJECT_LITERAL
          WORD "status"
          L_BRACE "{"
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "PENDING"
            WORD "PENDING"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Waiting for approval""
              QUOTE """
              WORD "Waiting"
              KW_FOR "for"
              WORD "approval"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "ACTIVE"
            WORD "ACTIVE"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Currently active""
              QUOTE """
              WORD "Currently"
              WORD "active"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "INACTIVE"
            WORD "INACTIVE"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Not active""
              QUOTE """
              WORD "Not"
              WORD "active"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "SUSPENDED"
            WORD "SUSPENDED"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Temporarily suspended""
              QUOTE """
              WORD "Temporarily"
              WORD "suspended"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "ComplexMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "value"
        TYPE_EXPR " int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WORD "match"
        OBJECT_LITERAL
          WORD "value"
          L_BRACE "{"
          INTEGER_LITERAL "0"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "zero""
              QUOTE """
              WORD "zero"
              QUOTE """
          INTEGER_LITERAL "1"
          PIPE "|"
          INTEGER_LITERAL "2"
          PIPE "|"
          INTEGER_LITERAL "3"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "small""
              QUOTE """
              WORD "small"
              QUOTE """
          INTEGER_LITERAL "4"
          DOT "."
          DOT "."
          INTEGER_LITERAL "10"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "medium""
              QUOTE """
              WORD "medium"
              QUOTE """
          OBJECT_FIELD "
    _"
            WORD "_"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "large""
              QUOTE """
              WORD "large"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
  Expected Expected Colon, found DoubleColon, found Expected Colon, found DoubleColon
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found Equals, found Expected Colon, found Equals
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found Word, found Expected Colon, found Word
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found DoubleColon, found Expected Colon, found DoubleColon
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found Equals, found Expected Colon, found Equals
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found Word, found Expected Colon, found Word
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found DoubleColon, found Expected Colon, found DoubleColon
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found Equals, found Expected Colon, found Equals
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found Word, found Expected Colon, found Word
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found DoubleColon, found Expected Colon, found DoubleColon
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found Equals, found Expected Colon, found Equals
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found RBrace, found Expected Colon, found RBrace
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found IntegerLiteral, found Expected Colon, found IntegerLiteral
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found IntegerLiteral, found Expected Colon, found IntegerLiteral
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found Word, found Expected Colon, found Word
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected Colon, found Equals, found Expected Colon, found Equals
  Expected Expected ',' or '}' after object field, found Expected ',' or '}' after object field
  Expected Expected field name or '}', found Expected field name or '}'
  Expected Expected Colon, found RBrace, found Expected Colon, found RBrace
